--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -75,7 +75,10 @@
                                 <i class="fas fa-tachometer-alt"></i> Dashboard
                             </a>
                             <a href="{% url 'approve_appointments' %}">
-                                <i class="fas fa-calendar-check"></i> Appointments Calendar
+                                <i class="fas fa-calendar-check"></i> Manage Appointments
+                                {% if pending_appointments_count > 0 %}
+                                <span class="notification-badge">{{ pending_appointments_count }}</span>
+                                {% endif %}
                             </a>
                             <a href="{% url 'approve_pets' %}">
                                 <i class="fas fa-paw"></i> Manage Pets
@@ -85,6 +88,9 @@
                             </a>
                             <a href="{% url 'approve_users' %}">
                                 <i class="fas fa-users"></i> Manage Users
+                                {% if pending_users_count > 0 %}
+                                <span class="notification-badge">{{ pending_users_count }}</span>
+                                {% endif %}
                             </a>
                             <a href="{% url 'manage_services' %}">
                                 <i class="fas fa-cogs"></i> Manage Services
