Revert changes without email notifications

--- a/core/templates/core/pending_approval.html
+++ b/core/templates/core/pending_approval.html
@@ -20,7 +20,7 @@
         <h3><i class="fas fa-info-circle"></i> What happens next?</h3>
         <ul>
             <li>Our team will review your registration within 24 hours</li>
-            <li>You'll receive an email notification once approved</li>
+            <li>Please check back later or contact support if you have questions</li>
             <li>After approval, you can log in and start booking grooming services</li>
             <li>You'll be able to add your pets and schedule appointments</li>
         </ul>
