--- a/core/static/core/css/base.css
+++ b/core/static/core/css/base.css
@@ -203,8 +203,9 @@ body {
 /* Main Content */
 .main-content {
     flex: 1;
+    align-self: center;
     max-width: 1200px;
-    margin: 0 250px;
+    margin: 0 50px;
     padding: 2rem 1rem;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
