--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <title>{% block title %}Dog Booking System{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Dog Booking System is a full-featured pet grooming management app for clients, staff, and managers to manage appointments and services efficiently.">
+    <meta name="keywords" content="dog grooming, pet booking, appointment system, grooming salon, Django project">
+    <meta name="author" content="Kerem Haeger">
     {% load static %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'core/css/base.css' %}">
